--- a/index.html
+++ b/index.html
@@ -20,9 +20,9 @@
       >
         <div class="navbar-brand">
           <h1 class="navbar-item is-size-5 has-text-info-light">Careers</h1>
-          <a class="navbar-item"> Home </a>
+          <button class="button is-ghost navbar-item mt-2"> Home </button>
 
-          <a class="navbar-item create-job-nav"> Create Jobs </a>
+          <button class="button is-ghost navbar-item create-job-nav mt-2"> Create Jobs </button>
         </div>
       </nav>
     </header>
@@ -79,7 +79,7 @@
       <div id="container" class="container mt-3"></div>
 
       <!-- ********************* jobs registration form modal *******************************-->
-      <div class="modal">
+      <div class="modal jobsRegister">
         <div class="modal-background has-background-white"></div>
         <div class="modal-content">
           <form class="container mx-4" id="create-job">
