--- a/index.html
+++ b/index.html
@@ -14,15 +14,17 @@
     <!--***********************  navbar ***********************************************-->
     <header>
       <nav
-        class="navbar is-success "
+        class="navbar is-success"
         role="navigation"
         aria-label="main navigation"
       >
         <div class="navbar-brand">
           <h1 class="navbar-item is-size-5 has-text-info-light">Careers</h1>
-          <button class="button is-ghost navbar-item mt-2"> Home </button>
+          <button class="button is-ghost navbar-item mt-2">Home</button>
 
-          <button class="button is-ghost navbar-item create-job-nav mt-2"> Create Jobs </button>
+          <button class="button is-ghost navbar-item create-job-nav mt-2">
+            Create Jobs
+          </button>
         </div>
       </nav>
     </header>
@@ -75,8 +77,11 @@
           </div>
         </div>
       </form>
-      <!--********************** jobs container ***************************************-->
-      <div id="container" class="container mt-3"></div>
+      <!--********************** job positions container ***************************************-->
+      <div
+        id="container-job-positions"
+        class="container mt-3 is-flex is-flex-wrap-wrap"
+      ></div>
 
       <!-- ********************* jobs registration form modal *******************************-->
       <div class="modal jobsRegister">
@@ -140,7 +145,9 @@
                 </button>
               </div>
               <div class="control">
-                <button class="button is-primary is-light is-small">Cancel</button>
+                <button class="button is-primary is-light is-small">
+                  Cancel
+                </button>
               </div>
             </div>
           </form>
@@ -153,8 +160,8 @@
     </main>
 
     <script src="js/main.js"></script>
-    <script src="js/post.js"></script>
     <script src="js/get.js"></script>
+    <script src="js/post.js"></script>
     <script src="js/put.js"></script>
     <script src="js/delete.js"></script>
   </body>
