--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <!-- favicon -->
+    <link rel="icon" type="image/jpg" href="/assets/image/favicon.png" />
     <link
       rel="stylesheet"
       href="https://cdn.jsdelivr.net/npm/bulma@0.9.4/css/bulma.min.css"
@@ -78,10 +80,12 @@
         </div>
       </form>
       <!--********************** job positions container ***************************************-->
-      <div
-        id="container-job-positions"
-        class="container mt-3 is-flex is-flex-wrap-wrap"
-      ></div>
+      <div class="container mt-3">
+        <div
+          class="columns is-multiline mx-5"
+          id="container-job-positions"
+        ></div>
+      </div>
       <!-- ********************* jobs registration form modal *******************************-->
       <div class="modal jobsRegister">
         <div class="modal-background has-background-white"></div>
@@ -170,17 +174,23 @@
       <div class="see-detail mt-4"></div>
 
       <!-- ******************** confirm job delete notification card *************** -->
-      <div class="notification is-danger is-light container-notification is-hidden mt-6">
+      <div
+        class="notification is-danger is-light container-notification is-hidden mt-6"
+      >
         Are you sure to delete this job?
-        <button class="ml-3 is-small button is-danger btn-confirm-delete">Delete</button>
+        <button class="ml-3 is-small button is-danger btn-confirm-delete">
+          Delete
+        </button>
         <button class="ml-3 is-small button is-dark">Cancel</button>
-     </div>
-    </main> 
+      </div>
+    </main>
 
     <script src="js/get.js"></script>
     <script src="js/main.js"></script>
     <script src="js/post.js"></script>
     <script src="js/put.js"></script>
     <script src="js/delete.js"></script>
+
+    
   </body>
 </html>
