Add filters without duplicates

--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
             <div class="field">
               <div class="control">
                 <div class="select is-small is-fullwidth">
-                  <select>
+                  <select id="filterLocation">
                     <option>Location</option>
                     <option>With options</option>
                   </select>
@@ -51,7 +51,7 @@
             <div class="field">
               <div class="control">
                 <div class="select is-small is-fullwidth">
-                  <select>
+                  <select id="filterSeniority">
                     <option>Seniority</option>
                     <option>With options</option>
                   </select>
@@ -63,7 +63,7 @@
             <div class="field">
               <div class="control">
                 <div class="select is-small is-fullwidth">
-                  <select>
+                  <select id="filterCategory">
                     <option>Category</option>
                     <option>With options</option>
                   </select>
