--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
       >
         <div class="navbar-brand">
           <h1 class="navbar-item is-size-5 has-text-info-light">Careers</h1>
-          <button class="button is-ghost navbar-item mt-2">Home</button>
+          <a href="index.html" class="button is-ghost navbar-item mt-2">Home</a>
 
           <button class="button is-ghost navbar-item create-job-nav mt-2">
             Create Jobs
@@ -33,12 +33,12 @@
 
     <main>
       <!-- ********************* search form ****************************************-->
-      <form class="container mt-3">
+      <form class="container mt-3 searchForm">
         <div class="columns mx-4">
           <div class="column">
             <div class="field">
               <div class="control">
-                <div class="select is-small is-fullwidth">
+                <div class="select is-small is-fullwidth"> 
                   <select id="filterLocation">
                   </select>
                 </div>
@@ -141,13 +141,13 @@
               </div>
             </div>
             <div class="field is-grouped">
-              <div class="control">
+              <div class="control btn-create-job">
                 <button class="button is-primary is-small" type="submit">
-                  Create
+                  Create 
                 </button>
               </div>
               <div class="control">
-                <button class="button is-primary is-light is-small">
+                <button class="button is-primary is-light is-small" onclick="mainView()">
                   Cancel
                 </button>
               </div>
@@ -165,17 +165,16 @@
         ></button>
       </div>
       <!-- **************************** edit/delete jobs ******************** -->
-      <div class="see-detail mt-4"></div>
+      <div class="see-detail m-6"></div>
 
       <!-- ******************** confirm job delete notification card *************** -->
       <div
-        class="notification is-danger is-light container-notification is-hidden mt-6"
-      >
+        class="notification is-danger is-light container-notification is-hidden mt-6">
         Are you sure to delete this job?
         <button class="ml-3 is-small button is-danger btn-confirm-delete">
           Delete
         </button>
-        <button class="ml-3 is-small button is-dark">Cancel</button>
+        <button class="ml-3 is-small button is-dark" onclick="mainView()">Cancel</button>
       </div>
     </main>
 
@@ -184,7 +183,6 @@
     <script src="js/post.js"></script>
     <script src="js/put.js"></script>
     <script src="js/delete.js"></script>
-
     
   </body>
 </html>
