Add edit job form

--- a/index.html
+++ b/index.html
@@ -141,6 +141,11 @@
               </div>
             </div>
             <div class="field is-grouped">
+              <div class="control btn-edit-job is-hidden">
+                <button class="button is-primary is-small">
+                  Edit
+                </button>
+              </div>
               <div class="control btn-create-job">
                 <button class="button is-primary is-small" type="submit">
                   Create 
@@ -149,11 +154,6 @@
               <div class="control">
                 <button class="button is-primary is-light is-small" onclick="mainView()">
                   Cancel
-                </button>
-              </div>
-              <div class="control">
-                <button class="button is-primary is-small is-hidden">
-                  Edit
                 </button>
               </div>
             </div>
