--- a/index.html
+++ b/index.html
@@ -38,9 +38,8 @@
           <div class="column">
             <div class="field">
               <div class="control">
-                <div class="select is-small is-fullwidth"> 
-                  <select id="filterLocation">
-                  </select>
+                <div class="select is-small is-fullwidth">
+                  <select id="filterLocation"></select>
                 </div>
               </div>
             </div>
@@ -49,8 +48,7 @@
             <div class="field">
               <div class="control">
                 <div class="select is-small is-fullwidth">
-                  <select id="filterSeniority">
-                  </select>
+                  <select id="filterSeniority"></select>
                 </div>
               </div>
             </div>
@@ -59,8 +57,7 @@
             <div class="field">
               <div class="control">
                 <div class="select is-small is-fullwidth">
-                  <select id="filterCategory">
-                  </select>
+                  <select id="filterCategory"></select>
                 </div>
               </div>
             </div>
@@ -141,18 +138,20 @@
               </div>
             </div>
             <div class="field is-grouped">
-              <div class="control btn-edit-job is-hidden">
-                <button class="button is-primary is-small">
-                  Edit
+              <div class="control btn-create-job">
+                <button class="button is-info is-small" type="submit">
+                  Create
                 </button>
               </div>
-              <div class="control btn-create-job">
-                <button class="button is-primary is-small" type="submit">
-                  Create 
-                </button>
+              <div class="control btn-edit-job is-hidden">
+                <button class="button is-primary is-small">Edit</button>
               </div>
               <div class="control">
-                <button class="button is-primary is-light is-small" onclick="mainView()">
+                <button
+                  class="button is-primary is-light is-small"
+                  type="button"
+                  onclick="mainView()"
+                >
                   Cancel
                 </button>
               </div>
@@ -169,12 +168,15 @@
 
       <!-- ******************** confirm job delete notification card *************** -->
       <div
-        class="notification is-danger is-light container-notification is-hidden mt-6">
+        class="notification is-danger is-light container-notification is-hidden mt-6"
+      >
         Are you sure to delete this job?
         <button class="ml-3 is-small button is-danger btn-confirm-delete">
           Delete
         </button>
-        <button class="ml-3 is-small button is-dark" onclick="mainView()">Cancel</button>
+        <button class="ml-3 is-small button is-dark" onclick="mainView()">
+          Cancel
+        </button>
       </div>
     </main>
 
@@ -183,6 +185,5 @@
     <script src="js/post.js"></script>
     <script src="js/put.js"></script>
     <script src="js/delete.js"></script>
-    
   </body>
 </html>
