--- a/index.html
+++ b/index.html
@@ -138,13 +138,10 @@
               </div>
             </div>
             <div class="field is-grouped">
-              <div class="control btn-create-job">
-                <button class="button is-info is-small" type="submit">
+              <div class="control">
+                <button class="button is-info is-small btn-create-job" type="submit">
                   Create
                 </button>
-              </div>
-              <div class="control btn-edit-job is-hidden">
-                <button class="button is-primary is-small">Edit</button>
               </div>
               <div class="control">
                 <button
