Add validation notification and Add job positions

--- a/index.html
+++ b/index.html
@@ -92,6 +92,9 @@
       <div class="modal jobsRegister">
         <div class="modal-background has-background-white"></div>
         <div class="modal-content">
+          <div class="notification is-danger is-hidden validation">
+          <strong>You must complete all fields</strong>
+          </div>
           <form class="container mx-4" id="create-job">
             <div class="field">
               <label class="label">Job Name</label>
