--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
               <div class="control">
                 <div class="select is-small is-fullwidth">
                   <select id="filterSeniority">
-                    <option value="seniority">All Senioritys</option>
+                    <option value="seniority">All Seniorities</option>
                   </select>
                 </div>
               </div>
@@ -62,7 +62,7 @@
               <div class="control">
                 <div class="select is-small is-fullwidth">
                   <select id="filterCategory">
-                    <option value="category">All Categorys</option>
+                    <option value="category">All Categories</option>
                   </select>
                 </div>
               </div>
